--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
+body{
+  width: 100%;
+  /* height: 100vh; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 1rem; */
+}
+.wrapper{
+  text-align: center;
+  margin: 2rem 0rem;
+}
+header{
+  margin: 1rem;
+}
+h1{
+  margin-bottom: 1rem;
+}
+ul{
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: .5rem;
+  margin: 0 1rem;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+li{
+  padding: 1rem 2rem;
+}
+@media (min-width:45rem) {
+  body{
+height: 100vh;
+  }
+  ul{
+     grid-template-columns: repeat(4,1fr);
+     margin-top: 2rem;
+  }
+  li{
+     padding: 2rem 3rem;
+  }
+  
+}
+@media (min-width:60rem) {
+ 
+ ul{
+   grid-template-columns: repeat(8,1fr);
+ }
+  
 }
